支持修改密码，引入Refresh Token机制，修复Mapping Error

--- a/KCSCommunity.Access/appsettings.json
+++ b/KCSCommunity.Access/appsettings.json
@@ -15,7 +15,8 @@
         "Secret": "A_VERY_STRONG_AND_SECRET_KEY_THAT_IS_AT_LEAST_32_BYTES_LONG_FOR_HS256_IN_PRODUCTION",
         "Issuer": "KCSCommunity.API",
         "Audience": "KCSCommunity.Users",
-        "ExpiryMinutes": 60
+        "ExpiryMinutes": 60,
+        "RefreshTokenExpiryDays": 7
     },
     "ApiSignature": {
         "Enabled": false
@@ -27,5 +28,8 @@
     },
     "Database": {
         "AutoMigrateOnStartup": true
+    },
+    "PasscodeSettings": {
+        "LifespanMinutes": 60
     }
 }
