Update Rider Solution Configuration, Update README.md File

--- a/KCSCommunity.Access/KCSCommunity.Access.csproj
+++ b/KCSCommunity.Access/KCSCommunity.Access.csproj
@@ -21,4 +21,10 @@
       <ProjectReference Include="..\KCSCommunity.Infrastructure\KCSCommunity.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="..\README.md">
+        <Link>README.md</Link>
+      </Content>
+    </ItemGroup>
+
 </Project>
