--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,12 +26,13 @@ jobs:
 
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      
+        
     - name: Install Swagger CLI
-      run: |
-        dotnet tool install --global Swashbuckle.AspNetCore.Cli
-        echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
-      
+      run: dotnet tool install --global Swashbuckle.AspNetCore.Cli
+        
+    - name: Add dotnet tools to PATH
+      run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
+    
     - name: Generate swagger.json
       run: |
         dotnet build ./KCSCommunity.Access/KCSCommunity.Access.csproj --configuration Debug
