接口添加本地话i18n支持，支持自定密码政策

--- a/KCSCommunity.Access/appsettings.json
+++ b/KCSCommunity.Access/appsettings.json
@@ -31,5 +31,12 @@
     },
     "PasscodeSettings": {
         "LifespanMinutes": 60
+    },
+    "PasswordPolicy": {
+        "RequiredLength": 10,
+        "RequireDigit": true,
+        "RequireLowercase": true,
+        "RequireUppercase": true,
+        "RequireNonAlphanumeric": true
     }
 }
