--- a/KCSCommunity.Application/KCSCommunity.Application.csproj
+++ b/KCSCommunity.Application/KCSCommunity.Application.csproj
@@ -23,4 +23,43 @@
       <ProjectReference Include="..\KCSCommunity.Domain\KCSCommunity.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Update="Resources\SharedValidationMessages.en-US.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>SharedValidationMessages.en-US.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Resources\SharedValidationMessages.zh-CN.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>SharedValidationMessages.zh-CN.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Resources\SharedValidationMessages.zh-TW.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>SharedValidationMessages.zh-TW.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Resources\SharedValidationMessages.en-US.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>SharedValidationMessages.en-US.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\SharedValidationMessages.zh-CN.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>SharedValidationMessages.zh-CN.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Resources\SharedValidationMessages.zh-TW.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>SharedValidationMessages.zh-TW.resx</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Localization.Abstractions">
+        <HintPath>..\..\..\.dotnet\shared\Microsoft.AspNetCore.App\8.0.8\Microsoft.Extensions.Localization.Abstractions.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
