--- a/KCSCommunity.Application/KCSCommunity.Application.csproj
+++ b/KCSCommunity.Application/KCSCommunity.Application.csproj
@@ -15,6 +15,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
       <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.6" />
+      <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.6" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
     </ItemGroup>
 
